examples/test/testpolicy12358.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12358
  namespace: namespace122
spec:
  podSelector:
    matchLabels:
      key37: value8
      key10: value45
      key36: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value47
          key6: value46
          key16: value17
      podSelector:
        matchLabels:
          key8: value14
          key34: value12
          key13: value14
